--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,7 +2,8 @@ name: npm Package
 
 on:
   push:
-    branches: [ "master" ]
+    branches: 
+      - '*'
   pull_request:
     branches: [ "master" ]
 
