--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -10,7 +10,8 @@ name: Build App with Docker Img
 
 on:
   push:
-    branches: [ "master" ]
+    branches: 
+      - '*'
   pull_request:
     branches: [ "master" ]
 
